simple crud - WIP

--- a/TaskTodoProxy/appsettings.json
+++ b/TaskTodoProxy/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=TaskTodoDb;Trusted_Connection=true;TrustServerCertificate=true;User Id=myUsername;Password=myPassword;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
